--- a/user-card/src/index.css
+++ b/user-card/src/index.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Nova+Cut|Rubik&display=swap');
+
+/* font-family: 'Rubik', sans-serif;
+font-family: 'Nova Cut', cursive; */
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: 'Rubik', "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
